  * Rediffed, cleaned up and properly named all dpatches.
  * Added forgotton changelog from the 1.5.0-dfsg-1 upload.
  * Using install -D call to install the lintian override.
  * Removed comment in rules about "dh_lintian"; this will not be implemented
    in debhelper anyway, see #109642 for more information.
  * Fixed spelling error and improved language in
    virtualbox-ose.README.rebuild.

 -- Daniel Baumann <daniel@debian.org>  Tue,  2 Oct 2007 13:57:00 +0200

virtualbox-ose (1.5.0-dfsg2-2) unstable; urgency=low

  [ Patrick Winnertz ]
  * Added README.Debian to virtualbox-ose in order to document that the
    configuration xml files of the machines are not compatible between
    1.4.0-svn4130 and the 1.5.0 release. (Closes: #441634)
  * Build only binary-dep packages in binary-dep target and only binary-indep
    packages in binary-indep target.
  * Added postrm to virtualbox-ose in order to remove the vboxusers group on
    purge. (Closes: #442396)

  [ Michael Meskes ]
  * Force udev to reload the rules in postinst. Hopefully this makes sure that
    the device always belongs to the right group.

 -- Michael Meskes <meskes@debian.org>  Sun, 23 Sep 2007 13:55:37 +0200

virtualbox-ose (1.5.0-dfsg2-1) unstable; urgency=low

  * Improved README.Debian for virtualbox-ose-source (Closes: #440793 )
  * Fixed error using different kernel sources than the one which is running
    (Closes: #440693 )
    Thanks to Stefan Lippers-Hollmann
  * The kernel module for virtualbox will only build on amd64 and i386
    (Closes: #440564)
  * Merge some changes that Daniel Baumann made in his own package before.
    Thanks.
  * Set the alioth ML as maintainer address, since this list will be used to
    discuss issues from now on.
  * Removed one patch for makefile. Instead use variables now.
    - Improved patch localconfig-kmk.dpatch
  * Upload of 1.5.0 fixes scrolling issue. (Closes: #440773 )
