@@ -1,26 +1,32 @@
-#!/bin/sh -e
+#!/bin/sh
 
-action="$1"
-oldversion="$2"
+set -e
 
-if [ "$action" != configure ]
-  then
-  exit 0
-fi
+case "${1}" in
+	configure)
+		# Adding vboxusers group
+		if ! getent group vboxusers > /dev/null
+		then
+			addgroup --quiet --system vboxusers
+		fi
 
+		# In case the system is running without inotify tell udev to
+		# reload the rules
+		if [ -x /sbin/udevcontrol ]
+		then
+			/sbin/udevcontrol reload_rules || true
+		fi
+		;;
 
-setup_vboxusers_group() {
-        if ! getent group vboxusers >/dev/null; then
-                addgroup --quiet --system vboxusers
-        fi
-}
+	abort-upgrade|abort-deconfigure|abort-remove)
 
-setup_vboxusers_group
+		;;
 
-# just in case the system is running without inotify tell udev to reload the rules
-if [ -x /sbin/udevcontrol ]; then
-	/sbin/udevcontrol reload_rules || true;
-fi
+	*)
+		echo "${0} called with unknown argument \`${1}'" 1>&2
+		exit 1
+		;;
+esac
 
 #DEBHELPER#
 
