@@ -1,11 +1,22 @@
-#!/bin/sh -e
+#!/bin/sh
 
-action="$1"
-oldversion="$2"
+set -e
 
-if [ "$action" = purge ]; then
-	delgroup --quiet --system vboxusers
-fi
+case "${1}" in
+	purge)
+		# Removing vboxusers group
+		delgroup --quiet --system vboxusers
+		;;
+
+	remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
+
+		;;
+
+	*)
+		echo "postrm called with unknown argument \`${1}'" >&2
+		exit 1
+		;;
+esac
 
 #DEBHELPER#
 
